# PROGRAMMING-TOOLS-C-

./: README.md
1/: geometry.cpp  geometry.h  main.cpp  visualization.cpp  visualization.h
1/1 module/: main.cpp  solver.cpp  solver.h  system_info.cpp  system_info.h
1/2 module/: main.cpp  system_info.cpp  system_info.h  triangle_area_calculator.cpp  triangle_area_calculator.h
1/3 module/: digit_sum_checker.cpp  digit_sum_checker.h  main.cpp  system_info.cpp
11 дз/: input.txt  output.txt  student.cpp
12 дз/: process_negatives.cpp  swap_max_first.cpp
13-14 дз/: show_rectangle_features.cpp
13-14 дз/expert_geometry/: CMakeLists.txt  expert_level.cpp  geometry3d.cpp  geometry3d.hpp  main.cpp
13-14 дз/expert_geometry_3d/: CMakeLists.txt  CMakeSettings.json  CppProperties.json  closesthit.hlsl  dx12_raytracing.cpp  dx12_raytracing.hpp  geometry3d.cpp  geometry3d.hpp  main.cpp  miss.hlsl  raygen.hlsl  raytracing.hlsl  vcpkg.json
15 дз/: edition_catalog.cpp
2/: animation_utils.cpp  animation_utils.h  application.cpp  application.h  card_game.cpp  card_game.h  input_utils.cpp  input_utils.h  main.cpp  min_finder.cpp  min_finder.h  visual_finder.cpp  visual_finder.h
3/: number_sequence.cpp  number_sequence.h
3/1/: geometry.cpp  geometry.h  main.cpp  visualization.cpp  visualization.h
3/2/: card_game.cpp  card_game.h
3/3/: number_sequence.cpp  number_sequence.h
3/4/: number_grid.cpp  number_grid.h
3/5/: function_table.cpp  function_table.h
3/6/: piecewise_function.cpp  piecewise_function.h
4/: number_grid.cpp  number_grid.h
4 дз/: CMakeLists.txt  main.cpp  sequence_calculator.cpp  sequence_calculator.h
5/: function_table.cpp  function_table.h
5 дз/: calculate_fx.cpp  calculate_series.cpp  sum_factorial.cpp  sum_sin.cpp
6/: piecewise_function.cpp  piecewise_function.h
6  дз/1/: check_three_digit_product.cpp
6  дз/2/: count_pairs_with_difference.cpp
6  дз/3/: check_positive_row.cpp
6  дз/4/: matrix_row_sums.cpp
6  дз/5/: remove_max_elements.cpp
6  дз/6/: insert_column_after_no_negative.cpp
7 дз/: findShortestWord.cpp  pointer_arithmetic.cpp  tempBuffer.cpp
8-10 дз/: input.txt  output.txt  student_race_processing.cpp  triangle_min_perimeter.cpp
